# analyzer/openapi.yml
@@ -129,76 +129,3 @@ paths:
                       type: string
                     trace_id:
                       type: string
-  /update:
-    post:
-      operationId: app.update_consistency_check
-      summary: Perform consistency check between Kafka queue and storage database
-      description: Retrieves data from processing, analyzer, and storage to compare event records and identify discrepancies.
-      responses:
-        '200':
-          description: Consistency check completed successfully.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  processing_time_ms:
-                    type: integer
-                    description: Time taken to run the checks in milliseconds
-        '500':
-          description: Error performing consistency check.
-  /checks:
-    get:
-      operationId: app.get_consistency_check
-      summary: Get results of the latest consistency check
-      description: Returns the results of the latest consistency check run by the /update endpoint.
-      responses:
-        '200':
-          description: Latest consistency check results.
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  last_updated:
-                    type: integer
-                    
-                  counts:
-                    type: object
-                    properties:
-                      db:
-                        type: object
-                        additionalProperties:
-                          type: integer
-                      queue:
-                        type: object
-                        additionalProperties:
-                          type: integer
-                      processing:
-                        type: object
-                        additionalProperties:
-                          type: integer
-                  missing_in_db:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        event_id:
-                          type: string
-                        trace_id:
-                          type: string
-                        type:
-                          type: string
-                  missing_in_queue:
-                    type: array
-                    items:
-                      type: object
-                      properties:
-                        event_id:
-                          type: string
-                        trace_id:
-                          type: string
-                        type:
-                          type: string
-        '404':
-          description: No consistency checks have been run yet.
